--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,20 @@
   display: flex;
   justify-content: flex-end;
 }
+
+.dashboard {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px 30px;
+}
+
+.post-container {
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 10px 20px;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
