--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,12 @@
   height: 30px;
   background-color: black;
   color: white;
-  padding: 5px 10px;
+  padding: 15px 10px;
   display: flex;
   justify-content: flex-end;
 }
 
-.dashboard {
+.display-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -22,4 +22,52 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  margin-bottom: 10px;
+}
+
+.btn {
+  padding: 4px 8px;
+  color: white;
+  border-radius: 5px;
+  font-size: 20px;
+  outline: none;
+  margin: 0px 10px;
+  text-decoration: none;
+}
+
+.btn:hover {
+  cursor: pointer;
+}
+
+.normal-btn {
+  background-color: #2aabe2;
+}
+
+.warning-btn {
+  background-color: red;
+}
+
+.input {
+  margin-bottom: 5px;
+  width: 200px;
+  font-size: 16px;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.input-row {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.box-medium {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+  width: 100%;
+  max-width: 300px;
 }
